# crypto-scanner

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_gap_resolve_streak_drop_cursors.py  003_gap_outcomes_returns.py
cgd/: __init__.py  settings.py
cgd/alerts/: __init__.py  renderers.py  telegram.py
cgd/alerts/summarizers/: __init__.py  null_summarizer.py
cgd/bot/: commands.py  poller.py
cgd/collectors/: __init__.py  ccxt_collector.py  ccxt_matrix.py  defillama.py  rpc_client.py
cgd/config/: __init__.py  ccxt_matrix_loader.py  pattern_config.py
cgd/db/: __init__.py  engine.py  models.py  timescale_policies.sql  views.sql
cgd/db/repos/: __init__.py  (+3 more)
cgd/engine/: __init__.py  eval_health.py  facts_loader.py  liquidity.py  pattern_registry.py  price_lookup.py  runner.py  stats.py
cgd/entities/: __init__.py  registry.py
cgd/patterns/: __init__.py  types.py
cgd/resilience/: __init__.py  http.py
cgd/vesting/: __init__.py  registry.py  types.py
cgd/workers/: __init__.py  celery_app.py  one_shot.py
config/: ccxt_matrix.yaml  patterns.yaml
scripts/: bootstrap_db.sh  build_watchlist.py  demo_alerts.py  deploy.sh  install_bot_service.sh  provision_droplet.sh  seed_entities.py  setup_env.sh  test_telegram.py
tests/: conftest.py  test_ccxt_matrix_loader.py  test_defillama_extract.py  test_facts_fdv_horizon.py  test_fixtures.py  test_lifecycle.py  test_liquidity_gate.py  test_patterns.py  test_runner_summary.py
(+20 files in other folders)
